--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="6s4PQ9WyY9QZvXsf8trg5Lx46rGF5Kcjnx_cq7yqvpc" />
+    <link rel="canonical" href="https://future-streaming-architecture.netlify.app/">
+    
 <meta name="keywords" content="lightweight streaming apps, global streaming, mobile video innovation, low-bandwidth streaming" />
 <meta name="description" content="Why lightweight streaming apps are rapidly growing worldwide and how technology, data optimization, and user behavior shape their rise in 2025." />
 <title>Why Lightweight Streaming Apps Are Growing Worldwide</title>
@@ -260,3 +263,4 @@
 
 </body>
 </html>
+
